<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/minutes_textbox"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/exercise_q2a1"
            android:ems="10"
            android:fontFamily="@font/karla"
            android:inputType="number"
            android:text="@string/exercise_q2a1"
            android:textAlignment="textEnd"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/days_textbox" />

        <EditText
            android:id="@+id/days_textbox"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/exercise_q1a1"
            android:ems="10"
            android:fontFamily="@font/karla"
            android:inputType="number"
            android:text="@string/exercise_q1a1"
            android:textAlignment="textEnd"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/large_title_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/karla"
            android:text="@string/exercise_desc"
            android:textAlignment="center"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/small_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/karla"
            android:text="@string/exercise_q2a2"
            android:textSize="@dimen/small_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/karla"
            android:text="@string/exercise_q2"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/karla"
            android:text="@string/exercise_q1"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
