<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@android:style/Theme.Black.NoTitleBar">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/large_title_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/info_desc"
            android:fontFamily="@font/karla"
            android:text="@string/info_desc"
            android:textAlignment="center"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/small_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/onboarding_q1"
            android:fontFamily="@font/karla"
            android:text="@string/onboarding_q1"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/onboarding_q2"
            android:fontFamily="@font/karla"
            android:text="@string/onboarding_q2"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/year_textbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/year_textbox" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/onboarding_q3"
            android:fontFamily="@font/karla"
            android:text="@string/onboarding_q3"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/height_ft_textbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/height_ft_textbox" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/onboarding_q4"
            android:fontFamily="@font/karla"
            android:text="@string/onboarding_q4"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/current_weight_textbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/current_weight_textbox" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/onboarding_q5"
            android:fontFamily="@font/karla"
            android:text="@string/onboarding_q5"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/goal_weight_textbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/goal_weight_textbox" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <RadioButton
                android:id="@+id/man_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:contentDescription="@string/onboarding_q1a1"
                android:fontFamily="@font/karla"
                android:text="@string/onboarding_q1a1"
                android:textColor="@color/colorDarkGray"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="25dp" />

            <RadioButton
                android:id="@+id/woman_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:contentDescription="@string/onboarding_q1a2"
                android:fontFamily="@font/karla"
                android:text="@string/onboarding_q1a2"
                android:textColor="@color/colorDarkGray"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="157dp"
                tools:layout_editor_absoluteY="16dp" />
        </RadioGroup>

        <EditText
            android:id="@+id/current_weight_textbox"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/onboarding_q5"
            android:ems="10"
            android:fontFamily="@font/karla"
            android:hint="@string/onboarding_q4a1"
            android:inputType="number"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goal_weight_textbox" />

        <EditText
            android:id="@+id/goal_weight_textbox"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/onboarding_q4a1"
            android:ems="10"
            android:fontFamily="@font/karla"
            android:hint="@string/onboarding_q4a1"
            android:inputType="number"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/year_textbox" />

        <EditText
            android:id="@+id/height_in_textbox"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/onboarding_q3a2"
            android:ems="10"
            android:fontFamily="@font/karla"
            android:hint="@string/onboarding_q3a2"
            android:inputType="number"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <EditText
            android:id="@+id/height_ft_textbox"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="@font/karla"
            android:hint="@string/onboarding_q3a1"
            android:inputType="number"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toStartOf="@+id/height_in_textbox"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <EditText
            android:id="@+id/year_textbox"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/onboarding_q2a1"
            android:ems="10"
            android:fontFamily="@font/karla"
            android:hint="@string/onboarding_q2a1"
            android:inputType="number"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/height_ft_textbox" />

        <Button
            android:id="@+id/info_next_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/karla"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/next_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/medium_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_weight_textbox" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>
